--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ pip-selfcheck.json
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,venv
 *.pcap
 *.pcapng
+*.cap
